--- a/style/styles.css
+++ b/style/styles.css
@@ -181,7 +181,7 @@ header.my_header {
     
 }
 
-.content {
+.container {
     flex: 1 1 auto;
 }
 
@@ -190,6 +190,7 @@ header.my_header {
     padding: 20px;
     border-radius: 40px;
     margin-bottom: 40px;
+    display: block;
 }
 
 .news:last-child {
@@ -208,6 +209,7 @@ header.my_header {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
+    border: 2px solid #fff;
 }
 
 .good__content {
@@ -218,7 +220,7 @@ header.my_header {
 }
 
 .good:hover {
-    background: #9220c0;
+    background: transparent;
     color: #fff;
     cursor: pointer;
 }
